--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   shared_preferences: ^2.2.2
   firebase_core: ^4.4.0
   cloud_firestore: ^6.1.2
+  image_picker: ^1.2.1
+  http: ^1.2.2
+  firebase_storage: ^13.0.6
 
 dev_dependencies:
   flutter_test:
