--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.2.1
   http: ^1.2.2
   firebase_storage: ^13.0.6
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
