--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +43,8 @@ dependencies:
   http: ^1.2.2
   firebase_storage: ^13.0.6
   cached_network_image: ^3.4.1
+  google_sign_in: ^6.2.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
