--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cached_network_image: ^3.4.1
   google_sign_in: ^6.2.1
   intl: ^0.20.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
